2004-07-31  Alexander Gottwald  <ago@freedesktop.org>

	* win.h:
	adjust prototype for winInitCmapPrivates to match Egberts change.	

2004-07-30  Egbert Eich  <eich@freedesktop.org>

	* winallpriv.c: (winInitCmapPrivates):
	test if colormap with index really exists in the list of
	installed maps before using it.


2004-07-09  Alexander Gottwald  <ago@freedesktop.org>

	* winconfig.c: Add entry for irish layout (ie)
	* InitOutput.c, winerror.c, winglobals.c: rename g_fUseMsg to 
	g_fSilentFatalError
	* InitOutput.c, winglobals.c, winprocarg.c: added commandline option 
	-silent-dup-error to allow silent termination if another instance of
	XWin was found running

2004-06-27  Alexander Gottwald  <ago@freedesktop.org>

	* winconfig.c: Add entry for us layout. This changes not much but 
	removes a strange error message about the unknown us layout. 

2004-06-24  Alexander Gottwald  <ago@freedesktop.org>

	* InitOutput.c: Check for textmode mounted /tmp and print a warning

2004-06-15  Harold Hunt  <huntharo@msu.edu>

	* windialogs.c: Fix path to locally installed changelog for the About 
	dialog box.

2004-05-27  Alexander Gottwald  <ago@freedesktop.org>

	* winpriv.c: Create win32 window if not already created
	* winmultiwindowwindow.c: Export winCreateWindowWindow

2004-05-27  Alexander Gottwald  <ago@freedesktop.org>

	* win.h: Allow CYGDEBUG to defined in the Makefile
	* winwindow.h: Allow CYGWINDOWING_DEBUG to defined in the Makefile

2004-05-19  Alexander Gottwald  <ago@freedesktop.org>
	
	* winmultiwindowicons.c (winInitGlobalIcons): Load the small default
	icon too
	* winprefs.h, winprefs.c (winOverrideDefaultIcon): Takes the iconsize
	as parameter

2004-05-19  Alexander Gottwald  <ago@freedesktop.org>

	* win.h, winmultiwindowicons.c (winXIconToHICON): Takes iconsize
	as parameter 
	* winglobals.c, winmultiwindowicons.c: Rename g_hiconX to g_hIconX.
	Added new variable g_hSmallIconX for 16x16 icon.